# assistant-cli

./: README.md  pyproject.toml
src/assistant_cli/: initial_setup.py  task.py
src/data/: config.json  project.json
