[project]
name = "cli-assistant"
version = "0.1.0"
description = "An assistant client for the command line"
authors = [
    { name = "Gabriella Martin", email = "gabriella.martin0101@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "simple-term-menu>=1.6.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/assistant_cli"]
